@@ -100,15 +100,13 @@ Memory allocation (code space): 28
 ------------------------------------------------------------------
 
 /x{1,3}+/BM 
-Memory allocation (code space): 56
+Memory allocation (code space): 40
 ------------------------------------------------------------------
-  0  11 Bra
-  2   7 Once
-  4     x
-  6     x{0,2}+
-  9   7 Ket
- 11  11 Ket
- 13     End
+  0   7 Bra
+  2     x
+  4     x{0,2}+
+  7   7 Ket
+  9     End
 ------------------------------------------------------------------
 
 /(x)*+/BM
