@@ -100,15 +100,13 @@ Memory allocation (code space): 9
 ------------------------------------------------------------------
 
 /x{1,3}+/BM 
-Memory allocation (code space): 19
+Memory allocation (code space): 13
 ------------------------------------------------------------------
-  0  15 Bra
-  3   9 Once
-  6     x
-  8     x{0,2}+
- 12   9 Ket
- 15  15 Ket
- 18     End
+  0   9 Bra
+  3     x
+  5     x{0,2}+
+  9   9 Ket
+ 12     End
 ------------------------------------------------------------------
 
 /(x)*+/BM
