@@ -440,10 +440,8 @@ Need char = \x{dd00}
      /i [^\x{8000}]*
      /i [^\x{7fff}]{2}
      /i [^\x{7fff}]{0,7}?
-        Once
      /i [^\x{100}]{5}
      /i [^\x{100}]?+
-        Ket
         Ket
         End
 ------------------------------------------------------------------
