@@ -1832,10 +1832,8 @@ Partial match: \x{0d}\x{0d}
      /i [^\x{8000}]*
      /i [^\x{7fff}]{2}
      /i [^\x{7fff}]{0,7}?
-        Once
      /i [^\x{fffff}]{5}
      /i [^\x{fffff}]?+
-        Ket
         Ket
         End
 ------------------------------------------------------------------
